2014-02-07  Richard Biener  <rguenther@suse.de>

	PR middle-end/60092
	* gcc.dg/tree-ssa/alias-30.c: New testcase.
	* gcc.dg/tree-ssa/alias-31.c: Likewise.

2014-02-06  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59918
	* g++.dg/torture/pr59918.C: New testcase.

2014-02-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/59575
	* gcc.target/arm/pr59575.c: New test.

	PR debug/59992
	* gcc.dg/pr59992.c: New test.

2014-02-06  Marc Glisse  <marc.glisse@inria.fr>

	* g++.dg/cpp0x/constexpr-attribute2.C: Restrict to target
	init_priority. Test alignment of variable instead of function.

2014-02-06  Marek Polacek  <polacek@redhat.com>

	PR c/60087
	* gcc.dg/pr60087.c: New test.

2014-02-06  Alan Modra  <amodra@gmail.com>

	* gcc.target/powerpc/pr60032.c: New.

2014-02-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/60062
	* gcc.c-torture/execute/pr60062.c: New test.
	* gcc.c-torture/execute/pr60072.c: New test.

2014-02-06  Ian Bolton  <ian.bolton@arm.com>

	* gcc.dg/tree-ssa/pr59597.c: Make called function static
	so that expected outcome works for PIC variants too.

2014-02-06  Yury Gribov  <y.gribov@samsung.com>
	    Kugan Vivekanandarajah  <kuganv@linaro.org>

	* gcc.target/arm/vect-noalign.c: New file.

2014-02-05  Jan Hubicka  <hubicka@ucw.cz>
	    Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/60013
	* gcc.dg/pr60013.c: New testcase.

2014-02-05  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.dg/vmx/sum2s.c: New.
	* gcc.dg/vmx/sum2s-be-order.c: New.

2014-02-05  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.dg/vmx/pack.c: New.
	* gcc.dg/vmx/pack-be-order.c: New.
	* gcc.dg/vmx/unpack.c: New.
	* gcc.dg/vmx/unpack-be-order.c: New.

2014-02-05  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* g++.dg/cilk-plus/CK/catch_exc.cc: Disable test for -O1.
	* c-c++-common/cilk-plus/CK/spawner_inline.c: Likewise.

2014-02-05  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.target/i386/avx512f-vrndscaless-2.c (compute_rndscaless):